# whatsapp_chatbot

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  ruff.toml  whatsapp_scraper.py
forms/: Hardware form.docx  users form.docx
graph/: .env  constant.py  graph.py  network_policy.py  nodes.py  state_and_schamas.py
graph/tools/: mcp_tools.py  tools.py  zoom_tool.py
graph/tools/network_diagnostics/: __init__.py  device_inventory.py  diagnostics.py  validators.py
tests/: test_mcp_tools.py  test_network_diagnostics.py  test_network_policy.py  test_parallel_processing.py
